<resources>
    <string name="app_name">Cool Weather APP</string>
    <string name="latitude">Latitude</string>
    <string name="_0_00">0.00</string>
    <string name="longitude">Longitude</string>
    <string name="pressure">Pressure</string>
    <string name="wind_dir">Wind Dir.</string>
    <string name="wind_spd">Wind Spd.</string>
    <string name="temp">Temp.</string>
    <string name="time">Time</string>
    <string name="update_weather">UPDATE WEATHER</string>
    <string name="not_found">Not Found</string>
    <string name="cool_weather_app">Cool Weather App</string>
</resources>